fixes topbar so that it vertically realigns when logo image is added.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3853,6 +3853,16 @@ Stylesheet: Main Stylesheet
 /*********************
 GENERAL STYLES
 *********************/
+.top-bar {
+  position: relative; }
+
+.top-bar-right .menu {
+  position: absolute;
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+  top: 50%;
+  right: 0; }
+
 #main {
   background-color: #fff;
   border: 1px solid #ddd; }
